# alfred-hoogle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  alfred-hoogle.cabal  build.hs  buildworkflow.sh  stack.yaml
app/: Main.hs
workflow_skeleton/: info.plist
